Add statistics endpoint with proper error handling and CORS configuration